--- a/package.json
+++ b/package.json
@@ -24,22 +24,23 @@
     "lint": "eslint ."
   },
   "dependencies": {
-    "astro": "^4.15.0",
     "@astrojs/react": "^3.6.2",
     "@astrojs/tailwind": "^5.1.0",
-    "tailwindcss": "^3.4.1",
+    "@vercel/analytics": "^1.6.1",
+    "astro": "^4.15.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "tailwindcss": "^3.4.1"
   },
   "devDependencies": {
+    "@astrojs/check": "^0.9.3",
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
-    "@astrojs/check": "^0.9.3",
-    "typescript": "^5.6.2",
+    "eslint": "^9.10.0",
+    "eslint-plugin-astro": "^1.2.4",
     "prettier": "^3.3.3",
     "prettier-plugin-astro": "^0.14.1",
-    "eslint": "^9.10.0",
-    "eslint-plugin-astro": "^1.2.4"
+    "typescript": "^5.6.2"
   },
   "engines": {
     "node": ">=18.0.0",
