--- a/package.json
+++ b/package.json
@@ -25,15 +25,16 @@
   },
   "dependencies": {
     "@astrojs/react": "^3.6.2",
+    "@astrojs/sitemap": "^3.7.0",
     "@astrojs/tailwind": "^5.1.0",
     "@vercel/analytics": "^1.6.1",
-    "astro": "^4.15.0",
+    "astro": "^5.17.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "tailwindcss": "^3.4.1"
   },
   "devDependencies": {
-    "@astrojs/check": "^0.9.3",
+    "@astrojs/check": "^0.9.2",
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
     "eslint": "^9.10.0",
